fixed missing script tag

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -59,6 +59,7 @@
         "query-input": "required name=search_term_string"
       }
     }
+    </script>
     <!-- Provider-specific structured data with FAQ -->
 {% if page.url != '/' %}
   {% set currentProvider = page.url | replace('/', '') | replace('/', '') %}
