--- a/src/_includes/content/airalo.njk
+++ b/src/_includes/content/airalo.njk
@@ -1,3 +1,7 @@
+
+<p>test</p>
+
+
 # Airalo Discount Codes & Promo Codes - Save Money in July 2025
 
 Airalo is the world's first eSIM marketplace, connecting travelers with local carriers in over 200 countries and regions. Founded in 2019, Airalo has revolutionized how people stay connected while traveling by offering affordable, flexible eSIM plans without the hassle of physical SIM cards or expensive roaming charges.
